Resolve cors get, but sign in post still error

--- a/frontend/assets/styles/variables.sass
+++ b/frontend/assets/styles/variables.sass
@@ -2,6 +2,6 @@
 
 =pn-cover-image($url)
   background-image: $url
-  background-position: center center
+  background-position: center
   background-size: cover
   padding: $spacer * 4
