--- a/frontend/assets/styles/variables.sass
+++ b/frontend/assets/styles/variables.sass
@@ -1,7 +1,6 @@
-@use "vuetify/lib/styles/settings/_variables"  as *
-
-=pn-cover-image($url)
+@mixin pn-cover-image($url)
   background-image: $url
   background-position: center
   background-size: cover
-  padding: $spacer * 4
+
+$translucent-background:rgba(255, 255, 255, 0.8) 
