--- a/frontend/assets/styles/variables.sass
+++ b/frontend/assets/styles/variables.sass
@@ -4,3 +4,9 @@
   background-size: cover
 
 $translucent-background:rgba(255, 255, 255, 0.8) 
+
+.wf-fill-screen
+  height: calc(100vh - 64px)
+  display: flex
+  flex-direction: column
+  overflow: auto
