Generate simple payroll report

--- a/frontend/assets/styles/variables.sass
+++ b/frontend/assets/styles/variables.sass
@@ -4,9 +4,10 @@
   background-size: cover
 
 $translucent-background:rgba(255, 255, 255, 0.8) 
+$appbar-height: 64px
 
 .wf-fill-screen
-  height: calc(100vh - 64px)
+  height: calc(100vh - $appbar-height)
   display: flex
   flex-direction: column
   overflow: auto
